<resources>
    <string name="app_name">Crypto-Logic</string>
    <string name="action_settings">Settings</string>
    <string name="try_to_guess_the_secret_word_one_letter_at_a_time">Try to guess the secret word, one letter at a time!</string>
    <string name="scrambled_word">Scrambled Word:</string>
    <string name="guessed_letters">Guessed Letters:</string>
    <string name="incorrect_guesses">Incorrect Guesses:</string>
    <string name="correct_guesses">Correct Guesses:</string>
    <string name="guess">Guess</string>
    <string name="enter_your_guess_here">Enter your guess here!</string>
    <string name="enter_your_text_here">Enter your text here!</string>
</resources>
